--- a/products/hp.css
+++ b/products/hp.css
@@ -9,7 +9,7 @@
 .container{
     width: 100vw;
     height: 100vh;
-    background-image: url(assets/img/bg.jpg);
+    background-image: url(img/bg.jpg);
     background-position: center;
     background-size: cover;
     padding: 0, 8%;
