--- a/account/login.css
+++ b/account/login.css
@@ -1,56 +1,65 @@
-/* Style for the login form container */
+/* login.css */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
     margin: 0;
+    padding: 0;
+    background-color: rgba(0, 0, 0, 0.7); /* Background color overlay */
+    color: #3320dc;
+}
+
+.background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.background-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 h1 {
-    color: #333;
-    margin-bottom: 20px;
-}
-
-/* Style for the form elements */
-#login-form {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     text-align: center;
+    padding: 20px;
 }
 
-label {
-    display: block;
-    margin-bottom: 10px;
-    color: #333;
-    font-weight: bold;
+#login-form {
+    background-color: rgba(0, 0, 0, 0.8); /* Form background color */
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 300px;
+    margin: 0 auto;
 }
 
 input[type="text"],
 input[type="password"] {
     width: 100%;
     padding: 10px;
-    margin-bottom: 20px;
+    margin: 10px 0;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 5px;
+    font-size: 16px;
 }
 
+/* Style for the login button */
 button[type="submit"] {
-    background-color: #007BFF;
-    color: #fff;
+    width: 100%;
+    padding: 10px;
+    background-color: #007BFF; /* Change this to your desired button background color */
+    color: #fff; /* Text color for the button */
     border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    font-weight: bold;
+    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    font-size: 18px;
+    transition: background-color 0.3s ease; /* Add a smooth hover effect */
 }
 
+/* Hover effect for the login button */
 button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #0056b3; /* Change this to the desired hover background color */
 }
+
