--- a/account/signup.css
+++ b/account/signup.css
@@ -4,13 +4,26 @@ body {
     text-align: center;
     padding: 20px;
 }
+.background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
 
+.background-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 h1 {
     color: #333;
 }
 
 form {
-    background-color: #fff;
+    background-color: #0cced1;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
